--- a/HW5.Rmd
+++ b/HW5.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Statistical Inference 1 - Homework 5"
-author: "Adriana Souza, Lilly Raud, Kevin Hunt, Saad Usmani, Beau Britain, Mike McCormack"
+author: "Adriana Souza, Lilly Raud, Kevin Hunt, Saad Usmani, Mike McCormack"
 date: "11/22/2017"
 output: 
   pdf_document: 
@@ -44,11 +44,56 @@ __Aside:__ Many of the issues you end up facing with a nonlinear relationship ca
 n <- 20
 b0 <- 10
 b1 <- 2
+b2 <- 5
 
-x <- runif(n, 0, 10)
-eps <- 3 * rnorm(n)
-y <- b0 - b1 * (x - 5)^2 + eps
+# a, c
+Nonlinear <- function(n, b0, b1, b2){
+  # Melissa gave us
+  # x1 <- runif(n, 0, 10)
+  # eps <- 3 * rnorm(n)
+  # y <- b0 - b1 * (x1 - 5)^2 + eps
+  
+  # exponential
+  exp.y <- b0 + b1*exp(x1) + eps
+  exp.ey <- b0 + b1*exp(x1)
+  exp.lm <- lm(exp.y ~ x1)
+  exp.reg.stats <- reg.stats(exp.lm, exp.ey)
+  
+  # polynomial
+  x2 <- runif(n, 0, 10)
+  pol.y <- b0 - b1 * (x1 - 5)^2 + b2*x2 + eps
+  pol.ey <- b0 - b1 * (x1 - 5)^2 + b2*x2
+  pol.lm <- lm(pol.y ~ x1 + x2)
+  pol.reg.stats <- reg.stats(pol.lm, pol.ey)
+  
+  # sinusoidal
+  sin.y <-b0 + b1*sin(x1) + eps
+  sin.ey <-b0 + b1*sin(x1)
+  sin.lm <- lm(sin.y ~ x1)
+  sin.reg.stats <- reg.stats(sin.lm, sin.ey)
+  
+  return()
+}
 
+reg.stats <- function(lm, ey){
+  yhat <- predict(lm, interval = "confidence")
+  confint <- confint(lm)
+  mse <- summary(lm)$sigma^2
+  pvalue <- summary(lm)$coefficients[,4]
+  return(list(yhat, confint, mse, pvalue))
+  
+  # tests
+  yhat.test <- c()
+  for (i in 1:length(ey)){
+    yhat.test[i] <- (ey[i] >= yhat[i, 2] & ey[i] <= yhat[i, 3])
+  }
+}
+# b
+smallNonlinear <- Nonlinear(20, b0, b1, b2)
+medNonlinear <- Nonlinear(100, b0, b1, b2)
+largeNonlinear <- Nonlinear(5000, b0, b1, b2)
+
+# 
 ```
 
 \newpage
