--- a/HW5.Rmd
+++ b/HW5.Rmd
@@ -9,6 +9,8 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library('mosaic')
+library('Hmisc')
 ```
 
 # Guidelines
@@ -41,50 +43,73 @@ __Aside:__ Many of the issues you end up facing with a nonlinear relationship ca
 
 ```{r}
 # Sample code to get started
+set.seed(1)
 n <- 20
 b0 <- 10
 b1 <- 2
 b2 <- 5
 
 # a, c
-Nonlinear <- function(n, b0, b1, b2){
+Nonlinear <- function(n, b0, b1, b2, func, bool = FALSE){
+
   # Melissa gave us
   x1 <- runif(n, 0, 10)
   eps <- 3 * rnorm(n)
   var <- var(eps)
   # y <- b0 - b1 * (x1 - 5)^2 + eps
   
+  
   # exponential
-  exp.y <- b0 + b1*exp(x1) + eps
-  exp.ey <- b0 + b1*exp(x1)
-  exp.lm <- lm(exp.y ~ x1)
-  exp.reg.stats <- reg.stats(exp.lm)
-  exp.reg.tests <- reg.tests(exp.reg.stats[1], exp.reg.stats[2], exp.reg.stats[4], exp.ey, list(b0,b1))
-  output(exp.reg.tests[1], exp.reg.tests[2], exp.reg.tests[3], exp.reg.stats[3], var)
+  if (func == "exponential"){
+    exp.y <- b0 + b1*exp(x1) + eps
+    exp.ey <- b0 + b1*exp(x1)
+    exp.lm <- lm(exp.y ~ x1)
+    exp.reg.stats <- reg.stats(exp.lm)
+    exp.reg.tests <- reg.tests(exp.reg.stats[1], exp.reg.stats[2], exp.reg.stats[4], exp.ey, list(b0,b1))
+    output(exp.reg.tests[1], exp.reg.tests[2], exp.reg.tests[3], exp.reg.stats[3], var,exp.lm, bool)
+  }
+  
   
   # polynomial
-  x2 <- runif(n, 0, 10)
-  pol.y <- b0 - b1 * (x1 - 5)^2 + b2*x2 + eps
-  pol.ey <- b0 - b1 * (x1 - 5)^2 + b2*x2
-  pol.lm <- lm(pol.y ~ x1 + x2)
-  pol.reg.stats <- reg.stats(pol.lm)
-  pol.reg.tests <- reg.tests(pol.reg.stats[1], pol.reg.stats[2], pol.reg.stats[4], pol.ey, list(b0, b1, b2))
+  if(func == "polynomial"){
+    x2 <- runif(n, 0, 10)
+    pol.y <- b0 - b1 * (x1 - 5)^2 + b2*x2 + eps
+    pol.ey <- b0 - b1 * (x1 - 5)^2 + b2*x2
+    pol.lm <- lm(pol.y ~ x1 + x2)
+    pol.reg.stats <- reg.stats(pol.lm)
+    pol.reg.tests <- reg.tests(pol.reg.stats[1], pol.reg.stats[2], pol.reg.stats[4], pol.ey, list(b0, b1, b2))
+    output(pol.reg.tests[1], pol.reg.tests[2], pol.reg.tests[3], pol.reg.stats[3], var, pol.lm, bool)
+  }
   
   # sinusoidal
-  sin.y <-b0 + b1*sin(x1) + eps
-  sin.ey <-b0 + b1*sin(x1)
-  sin.lm <- lm(sin.y ~ x1)
-  sin.reg.stats <- reg.stats(sin.lm)
-  sin.reg.tests <- reg.tests(sin.reg.stats[1], sin.reg.stats[2], sin.reg.stats[4], sin.ey, list(b0,b1))
+  if(func == "sinusoidal"){
+    sin.y <-b0 + b1*sin(x1) + eps
+    sin.ey <-b0 + b1*sin(x1)
+    sin.lm <- lm(sin.y ~ x1)
+    sin.reg.stats <- reg.stats(sin.lm)
+    sin.reg.tests <- reg.tests(sin.reg.stats[1], sin.reg.stats[2], sin.reg.stats[4], sin.ey, list(b0,b1))
+    output(sin.reg.tests[1], sin.reg.tests[2], sin.reg.tests[3], sin.reg.stats[3], var, sin.lm, bool)
+  }
+  
+  if(func == "normal"){
+    norm.y <-b0 + b1*(x1) + eps
+    norm.ey <-b0 + b1*(x1)
+    norm.lm <- lm(norm.y ~ x1)
+    norm.reg.stats <- reg.stats(norm.lm)
+    norm.reg.tests <- reg.tests(norm.reg.stats[1], norm.reg.stats[2], norm.reg.stats[4], norm.ey, list(b0,b1))
+    output(norm.reg.tests[1], norm.reg.tests[2], norm.reg.tests[3], norm.reg.stats[3], var, norm.lm, bool)
+  }
+  
   return()
 }
+
+samp <- c("sinusoidal", "polynomial", "exponential", "normal")
 
 reg.stats <- function(lm){
   yhat <- predict(lm, interval = "confidence")
   confint <- confint(lm)
-  mse <- mean(residuals(lm)^2)
-  pvalue <- list(rownames(summary(lm)$coefficients), summary(lm)$coefficients[,4])
-
+  mse <- anova(lm)[2,3]
+  pvalue <- summary(lm)$coefficients[,4]
   return(list(yhat, confint, mse, pvalue))
 }
 
@@ -93,7 +118,7 @@ reg.stats <- function(lm){
 reg.tests <- function(yhat, confint, pvalue, ey, betaslist)  {
   # ey coverage
   # create a percentage of EYi's that fall within the confidence interval of Yhat
-  yhat.test <- c()
+  yhat.test <- vector(mode="logical", length = length(ey))
   # print(yhat)
   # print(yhat[[1]][,2])
   for (i in 1:length(ey)){
@@ -103,7 +128,7 @@ reg.tests <- function(yhat, confint, pvalue, ey, betaslist)  {
   
   # beta coverage
   # creates a boolean of if all beta's fall within their confidence intervals
-  beta.test <- c()
+  beta.test <- vector(mode="logical", length = length(betaslist))
   for (b in 1:length(betaslist)){
     beta.test[b] <- (betaslist[b] >= confint[[1]][b,1] & betaslist[b] <= confint[[1]][b, 2])
   }
@@ -111,44 +136,106 @@ reg.tests <- function(yhat, confint, pvalue, ey, betaslist)  {
   
   # pvalue test
   # create a list of lists with coefficient name and boolean of if pvalue significant
-  pval.test <- c()
-  for (p in 1:length(pvalue)){
-    pval.test[p] <- list(pvalue[[1]][[1]][p], (pvalue[[1]][[2]][p] <= 0.05))
-  }
+  coefficient.df <- data.frame(matrix(ncol = 2, nrow = length(betaslist)))
   
-  return(list(yhat.coverage, beta.pass, pval.test))
+  for (p in 1:length(pvalue[[1]])){
+    coefficient.df[p, 1] <-names(pvalue[[1]])[p]
+    coefficient.df[p, 2] <- (pvalue[[1]][p] <= 0.05)
+  }
+  return(list(yhat.coverage, beta.pass, coefficient.df))
 }
 
-output <- function(yhat.coverage, beta.pass, pval.test, mse, var){
+output <- function(yhat.coverage, beta.pass, coefficient.df, mse, var, lm, bool){
   # is beta in confint?
-  print("Betas are within their confidence interval: ")
-  print(beta.pass[[1]])
+  print(paste("Betas are within their confidence interval: ", beta.pass[[1]]))
+
   
   # is EYi in confint for Yhat?
-  print("How often does the EYi fall within the Yhat confidence interval?: ", yhat.coverage, " % of the time")
+  print(paste("How often does the EYi fall within the Yhat confidence interval?: ", yhat.coverage, "% of the time"))
   
   # How close is MSE to sigma^2? Later this will be represented as a histogram for multiple simulations
-  print("MSE is: ", mse, "vs. the variance: ", var)
+  print(paste("MSE is: ", mse, "vs. the variance: ", var))
   
   # Did we correctly conclude beta does not equal 0?
-  for (elem in pval.test){
-    if (!elem[2]){
-      print(elem[1], "coefficient was not significant")
-    }
-    else{
-      print(elem[1], "passes")
-    }
+  if (!all(coefficient.df$X2)){
+    print(paste("The following coefficients were not significant", coefficient.df[coefficient.df$X2 == FALSE]))
+  }
+  else {
+    print("All coefficients are significant")
+    print("")
+  }
+  
+  if (bool){
+    plot(lm)
   }
 }
 # b
-smallNonlinear <- Nonlinear(20, b0, b1, b2)
-medNonlinear <- Nonlinear(100, b0, b1, b2)
-largeNonlinear <- Nonlinear(5000, b0, b1, b2)
-
-# TO DO:
-# create output of reg.tests results
-# fix error
+size <- c(20,100,5000)
+for (i in 1:length(samp)){
+  for (j in 1:length(size)){
+    print(paste("Running sample ", samp[i]," with size ",size[j]))
+    Nonlinear(size[j], b0,b1,b2,samp[i])
+  }
+}
 ```
+Exponential
+  Small
+    - Betas do not fall with in the confidence interval
+    - Questionable EYi prediction of (70%)
+    - MSE vs variance has a huge difference
+  
+  Medium
+    - Betas do not fall with in the confidence interval
+    - Horrible EYi prediction of (18%)
+    - MSE vs variance has an even larger difference than the small exponential function
+    
+  Large
+  - Betas do not fall with in the confidence interval
+  - Atrocious EYi prediction of (2.48%)
+  - The discrepency between MSE vs variance is the worst out of all the exponential functions
+  
+Polynomial
+  Small
+  - Betas do not fall with in the confidence interval
+  - Questionable EYi prediction of (45%)
+  - Discrepency between MSE and variance.  Not has large as the exponential difference for the small sample size.
+  
+  Medium
+  - Betas do not fall with in the confidence interval
+  - Even worse EYi prediction of (21%)
+  - iscrepency between MSE and variance.  Not has large as the exponential difference for the medium sample size.
+  
+  Large
+  - Betas do not fall with in the confidence interval
+  - Horrid EYi prediction of (2.72%)
+  - discrepency between MSE and variance.  Not has large as the exponential difference for the large sample size.
+  
+Sinusoidal
+  Small
+  - Betas do not fall with in the confidence interval
+  - Questionable EYi prediction of (70%)
+  - Discrepency between MSE and variance is small.
+  
+  Medium
+  - Betas do not fall with in the confidence interval
+  - Bad EYi prediction of (45%)
+  - Discrepency between MSE and variance is very small.
+  
+  Large
+  - Betas do not fall with in the confidence interval
+  - Horrible EYi prediction of (5.88%)
+  - Discrepency between MSE and variance is small.
+  
+```{r}
+# choose random sample size and random function
+# Repeat to your hearts desire and test yourself
+n <- sample(20:5000, 1)
+i <- sample(1:4, 1)
+Nonlinear(n, b0,b1,b2,samp[i],TRUE)
+
+```
+
+After testing ourselves 25 times we found that we were accurate 22 times out of 25.  Resulting in 88% accuracy for testing our groups
 
 \newpage
 
@@ -168,23 +255,65 @@ largeNonlinear <- Nonlinear(5000, b0, b1, b2)
 
 ```{r}
 # Sample code to get started
-n <- 200
-b0 <- 10
-b1 <- 2
-eps_alpha <- 2
-eps_beta <- 1/4
 
 
-x <- runif(n, 0, 10)
-eps <- (rgamma(n, eps_alpha, 1/eps_beta) - eps_alpha * eps_beta) * 2
-y <- b0 - b1 * x + eps
+nonnormal_functions <- c("poisson","gamma")
 
-hist(eps)
-var(eps)
-mean(eps)
+Nonnormal <- function(n, b0, b1, func, bool = FALSE){
+  b0 <- 10
+  b1 <- 2
+  eps_alpha <- 2 #Shape
+  eps_beta <- 1/4 #Scale
+  
+  x <- runif(n, 0, 10)
+  
+  poisson <- (func)
 
+  # poisson
+  if (func == "poisson"){
+    eps <- rpois(n, lambda = 5)
+    var <- var(eps)
+    pois.y <- b0 - b1*(x) + eps
+    pois.ey <- b0 - b1*(x)
+    pois.lm <- lm(pois.y ~ x)
+    pois.reg.stats <- reg.stats(pois.lm)
+    pois.reg.tests <- reg.tests(pois.reg.stats[1], pois.reg.stats[2], pois.reg.stats[4], pois.ey, list(b0,b1))
+    output(pois.reg.tests[1], pois.reg.tests[2], pois.reg.tests[3], pois.reg.stats[3], var,pois.lm, bool)
+  }
+  
+  if(func == "gamma"){
+    eps <- (rgamma(n, eps_alpha, 1/eps_beta) - eps_alpha * eps_beta) * 2
+    var <- var(eps)
+    gamma.y <- b0 - b1*(x) + eps
+    gamma.ey <- b0 - b1*(x)
+    gamma.lm <- lm(gamma.y ~ x)
+    gamma.reg.stats <- reg.stats(gamma.lm)
+    gamma.reg.tests <- reg.tests(gamma.reg.stats[1], gamma.reg.stats[2], gamma.reg.stats[4], gamma.ey, list(b0,b1))
+    output(gamma.reg.tests[1], gamma.reg.tests[2], gamma.reg.tests[3], gamma.reg.stats[3], var,gamma.lm, bool)
+  }
+  
+}
+
+size <- c(20,100,5000)
+for (i in 1:length(nonnormal_functions)){
+  for (j in 1:length(size)){
+    print(paste("Running sample ", nonnormal_functions[i]," with size ",size[j]))
+    Nonnormal(size[j], b0,b1,nonnormal_functions[i])
+  }
+}
 ```
 
+part e
+```{r}
+# choose random sample size and random function
+# Repeat to your hearts desire and test yourself
+n <- sample(20:5000, 1)
+i <- sample(1:2, 1)
+Nonnormal(n, b0,b1,nonnormal_functions[i],TRUE)
+
+# to-do add normal case!!
+
+```
 \newpage
         
 3. Heterogeneous Variances
