--- a/HW5.Rmd
+++ b/HW5.Rmd
@@ -44,10 +44,6 @@ __Aside:__ Many of the issues you end up facing with a nonlinear relationship ca
 ```{r}
 # Sample code to get started
 set.seed(1)
-n <- 20
-b0 <- 10
-b1 <- 2
-b2 <- 5
 
 # creates information for a normal model to be used in every question part e
 normal <- function(n, b0, b1, bool){
@@ -62,7 +58,7 @@ normal <- function(n, b0, b1, bool){
 
 
 # a, c
-Nonlinear <- function(n, b0, b1, b2, func, bool = FALSE){
+Nonlinear <- function(n, func, bool = FALSE){
 
   # Melissa gave us
   x1 <- runif(n, 0, 10)
@@ -71,6 +67,9 @@ Nonlinear <- function(n, b0, b1, b2, func, bool = FALSE){
   # y <- b0 - b1 * (x1 - 5)^2 + eps
   x2 <- runif(n, 0, 10)
   samp <- c("sinusoidal", "polynomial", "exponential", "normal")
+  b0 <- 10
+  b1 <- 2
+  b2 <- 5
   
   # exponential
   if (func == "exponential"){
@@ -161,8 +160,9 @@ output <- function(yhat.coverage, beta.pass, coefficient.df, mse, var, lm, bool)
   print(paste("MSE is: ", mse, "vs. the variance: ", var))
   
   # Did we correctly conclude beta does not equal 0?
-  if (!all(coefficient.df$X2)){
-    print(paste("The following coefficients were not significant", coefficient.df[coefficient.df$X2 == FALSE]))
+  if (!all(coefficient.df[[1]]$X2)){
+    print(paste("The following coefficients were not significant: ", coefficient.df[[1]]$X1[coefficient.df[[1]]$X2 == FALSE]))
+    print("")
   }
   else {
     print("All coefficients are significant")
@@ -179,7 +179,7 @@ size <- c(20,100,5000)
 for (i in 1:length(samp)){
   for (j in 1:length(size)){
     print(paste("Running sample ", samp[i]," with size ",size[j]))
-    Nonlinear(size[j], b0,b1,b2,samp[i])
+    Nonlinear(size[j], samp[i])
   }
 }
 ```
@@ -236,7 +236,7 @@ Sinusoidal
 # Repeat to your hearts desire and test yourself
 n <- sample(20:5000, 1)
 i <- sample(1:4, 1)
-Nonlinear(n, b0,b1,b2,samp[i],TRUE)
+Nonlinear(n, samp[i], TRUE)
 
 ```
 
@@ -261,7 +261,7 @@ After testing ourselves 25 times we found that we were accurate 22 times out of 
 ```{r}
 nonnormal_functions <- c("poisson","gamma", "normal")
 
-Nonnormal <- function(n, b0, b1, func, bool = FALSE){
+Nonnormal <- function(n, func, bool = FALSE){
   b0 <- 10
   b1 <- 2
   eps_alpha <- 2 #Shape
@@ -299,7 +299,7 @@ size <- c(20,100,5000)
 for (i in 1:length(nonnormal_functions)){
   for (j in 1:length(size)){
     print(paste("Running sample ", nonnormal_functions[i]," with size ",size[j]))
-    Nonnormal(size[j], b0,b1,nonnormal_functions[i])
+    Nonnormal(size[j], nonnormal_functions[i])
   }
 }
 ```
@@ -310,7 +310,7 @@ part e
 # Repeat to your hearts desire and test yourself
 n <- sample(20:5000, 1)
 i <- sample(1:3, 1)
-Nonnormal(n, b0,b1,nonnormal_functions[i],TRUE)
+Nonnormal(n,nonnormal_functions[i],TRUE)
 
 ```
 \newpage
@@ -485,22 +485,71 @@ correlated_error(n, correlated_error_options[i], TRUE)
         iii. Based on the diagnostics, predict whether the problem areas you mentioned in part d will be affected or not. (Note: You are not predicting whether the assumptions are violated-- just whether they are violated to such an extent that your ability to use the model is compromised)
 
 ```{r}
-set.seed(42) # For sanity
+multicollinearity_options <- c("linear combination","multiplier", "normal")
 
-n <- 20
-b0 <- 10
-b1 <- 3
-b2 <- 7
+multicollinearity <- function(n, func, bool = FALSE){
+  # Sample code to get started
+  b0 <- 10
+  b1 <- 3
+  b2 <- 7
+  sigma <- 2
+  
+  x <- runif(n, 0, 10)
+  x2_adding <- x + rnorm(n) #x2 is a linear combination of x1 and some number
+  x2_mult <-x*rnorm(n)
+  
+  # linear combination
+  if (func == "linear combination"){
+    lc.eps <- rnorm(n, sd = sigma) 
+    lc.y <- b0 + b1 * x1 + b2 * x2_adding + lc.eps
+    lc.ey <- b0 + b1 * x1 + b2 * x2_adding
+    lc.var <- var(lc.eps)
+    lc.lm <- lm(lc.y ~ x + x2_adding)
+    cor(x, x2_adding)
+    testing(lc.lm, lc.ey, list(b0,b1, b2), lc.var, bool)
+    
+  }
+  
+  # x2 is x1*some multiplier
+  if(func == "multiplier"){
+    mult.eps <- rnorm(n, sd = sigma) 
+    mult.y <- b0 + b1 * x1 + b2 * x2_mult + mult.eps
+    mult.ey <- b0 + b1 * x1 + b2 * x2_mult
+    mult.var <- var(mult.eps)
+    mult.lm <- lm(mult.y ~ x + x2_mult)
+    testing(mult.lm, mult.ey, list(b0,b1, b2), mult.var, bool)
+    cor(x, x2_mult)
+  }
+  
+  # normal
+  if(func == "normal"){
+    normal(n, b0, b1, bool)
+  }
+}
 
-sigma <- 2
+for (i in 1:length(multicollinearity_options)){
+  for (j in 1:length(size)){
+    print(paste("Running sample ", multicollinearity_options[i]," with size ",size[j]))
+    multicollinearity(size[j], multicollinearity_options[i])
+  }
+}
+```
 
-x1 <- runif(n, 0, 10)
-x2_q5 <- x1 + rnorm(n) #x2 is a linear combination of x1 and some number
+```{r}
+# choose random sample size and random function
+# Repeat to your hearts desire and test yourself
+n <- sample(20:5000, 1)
+i <- sample(1:3, 1)
+multicollinearity(n, multicollinearity_options[i], TRUE)
 
-eps <- rnorm(n, sd = sigma) 
-y <- b0 + b1 * x1 + b2 * x2_q5 + eps
+```
 
+\newpage
 
+6. Put it all together: Combine the code from the previous 5 parts. Have R randomly choose whether to generate data that violates one (or more) of the assumptions, or whether all the assumptions are valid. Show appropriate diagnostics and test yourself to see if you can predict whether there are problem areas or not. Repeat the simulation several times and record your accuracy at detecting the different problem areas.
+
+From Melissa. Might want to add if we are having a hard time determining if a sample is correlated:
+```{r}
 ## Testing for colinearity
 cor(x1, x2_q5) # Showing there is correlation
 ## A high kappa indicates trouble
@@ -508,6 +557,37 @@ test_colinearity <- model.matrix(~ x1 + x2_q5)
 kappa(mm12)                          
 ```
 
-\newpage
+```{r}
+# choose random sample size and random function
+# Repeat to your hearts desire and test yourself
+n <- sample(20:5000, 1)
+violationslist <- c("Nonlinear", "Nonnormal", "Hetero", "correlated errors", "multicollinearity")
+v <- sample(1:5, 1)
+violation <- violationslist[v]
 
-6. Put it all together: Combine the code from the previous 5 parts. Have R randomly choose whether to generate data that violates one (or more) of the assumptions, or whether all the assumptions are valid. Show appropriate diagnostics and test yourself to see if you can predict whether there are problem areas or not. Repeat the simulation several times and record your accuracy at detecting the different problem areas.
+if (violation == "Nonlinear"){
+  i <- sample(1:4, 1)
+  Nonlinear(n,samp[i],TRUE)
+}
+
+if (violation == "Nonnormal"){
+  i <- sample(1:3, 1)
+  Nonnormal(n, nonnormal_functions[i],TRUE)
+}
+
+if (violation == "Hetero"){
+  i <- sample(1:4, 1)
+  Hetero(n,samp.hetero[i],TRUE)
+}
+
+if (violation == "correlated errors"){
+  i <- sample(1:3, 1)
+  correlated_error(n, correlated_error_options[i], TRUE)
+}
+
+if (violation =="multicollinearity"){
+  i <- sample(1:3, 1)
+  multicollinearity(n, multicollinearity_options[i], TRUE)
+}
+```
+
